renamed faces to zero-padded 5 digits

--- a/notebooks/process_images.ipynb
+++ b/notebooks/process_images.ipynb
@@ -281,28 +281,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## rename all files to zero-padded 4 digits"
+    "## rename all files to zero-padded 5 digits"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "\n",
-    "directory = '../skins'\n",
-    "files = os.listdir(directory)\n",
+    "files = os.listdir(RESULT_DIR)\n",
     "\n",
     "for index, file_name in enumerate(files):\n",
     "    new_file_name = \"{:05d}\".format(index + 1)\n",
     "    \n",
-    "    file_path = os.path.join(directory, file_name)\n",
+    "    file_path = os.path.join(RESULT_DIR, file_name)\n",
     "    \n",
     "    _, extension = os.path.splitext(file_name)\n",
     "    \n",
-    "    new_file_path = os.path.join(directory, new_file_name + extension)\n",
+    "    new_file_path = os.path.join(RESULT_DIR, new_file_name + extension)\n",
     "    \n",
     "    os.rename(file_path, new_file_path)\n"
    ]
