documented the current encoding solution

--- a/notebooks/process_images.ipynb
+++ b/notebooks/process_images.ipynb
@@ -295,7 +295,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "top-down and right-left symmetricity rate features"
+    "top-down and right-left symmetry rate features"
    ]
   },
   {
