--- a/notebooks/encode.ipynb
+++ b/notebooks/encode.ipynb
@@ -89,21 +89,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u0000\u0001\u0002\u0003\u0004\u0005\u0006\t\n",
-      "\u000e\u000f\u0010\u0011\u0012\u0013\u0014\u0015\u0016\u0017\u0018\u0019\u001a\u001b\u001c\u001d\u001e\u001f !\"#$%&'()*+,-./0123456789:;<=>?@ABCDEFGHIJKLMNOPQRSTUVWXYZ[\\]^_`abcdefghijklmnopqrstuvwxyz{|}~ ¡¢£¤¥¦§¨©ª«¬­®¯°±²³´µ¶·¸¹º»¼½¾¿ÀÁÂÃÄÅÆÇÈÉÊËÌÍÎÏÐÑÒÓÔÕÖ×ØÙÚÛÜÝÞßàáâãäåæçèéêëìíîïðñòóôõö÷øùúûüýþ"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for c in range(0, 255):\n",
-    "    print(chr(c), end='')"
+    "    print(chr(c), end='')\n",
+    "\n",
+    "# printing special characters terminated the rendering of the rest of the notebook due to a github bug, so commented them manually:\n",
+    "# [special characters] !\"#$%&'()*+,-./0123456789:;<=>?@ABCDEFGHIJKLMNOPQRSTUVWXYZ[\\]^_`abcdefghijklmnopqrstuvwxyz{|}~ [more special characters]"
    ]
   },
   {
