moved files to assets

--- a/notebooks/encode.ipynb
+++ b/notebooks/encode.ipynb
@@ -59,7 +59,7 @@
     "  - We don't want any of the occupied color channels to overlap unless there is no empty one left (after 64 characters) [second advantage above].\n",
     "  - Given the normal distribution of left-right symmetry in training examples, the order of filling color channels should be such that it results in a symmetric input image.\n",
     "\n",
-    "![normal distribution of avatars symmetry](./normal-dist-plot.png)\n",
+    "![normal distribution of avatars symmetry](./assets/normal-dist-plot.png)\n",
     "\n",
     "---\n",
     "\n",
