--- a/notebooks/process_images.ipynb
+++ b/notebooks/process_images.ipynb
@@ -88,7 +88,7 @@
     "fig, axs = plt.subplots(1, 4, figsize=(12, 4))\n",
     "\n",
     "# source image: https://www.minecraftskins.com/skin/21856799/trial-boy/\n",
-    "skin = mpimg.imread(\"./trial-boy-21856799.png\")\n",
+    "skin = mpimg.imread(\"./assets/trial-boy-21856799.png\")\n",
     "\n",
     "# skin image\n",
     "axs[0].imshow(skin)\n",
@@ -751,7 +751,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "conv_model.save('conv_model.keras')"
+    "conv_model.save('./assets/conv_model.keras')"
    ]
   },
   {
@@ -860,7 +860,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xgb_model.save_model('xgb_model.bin')"
+    "xgb_model.save_model('./assets/xgb_model.bin')"
    ]
   },
   {
