--- a/notebooks/1_image_preprocess.ipynb
+++ b/notebooks/1_image_preprocess.ipynb
@@ -115,13 +115,13 @@
     "\n",
     "# skin image\n",
     "axs[0].imshow(skin)\n",
-    "axs[0].set_title('Skin')\n",
+    "axs[0].set_title('Original skin file')\n",
     "axs[0].axis('off')\n",
     "\n",
     "# naked face\n",
     "face = skin[8:16, 8:16]\n",
     "axs[1].imshow(face)\n",
-    "axs[1].set_title('Naked Face')\n",
+    "axs[1].set_title('Naked face')\n",
     "axs[1].axis('off')\n",
     "\n",
     "# mask\n",
@@ -136,7 +136,7 @@
     "non_zero_opacity_indices = np.where(opacity != 0)\n",
     "new_face[non_zero_opacity_indices] = mask[non_zero_opacity_indices]\n",
     "axs[3].imshow(new_face)\n",
-    "axs[3].set_title('Mask on Face')\n",
+    "axs[3].set_title('Mask on face')\n",
     "axs[3].axis('off')\n",
     "\n",
     "plt.tight_layout()\n",
@@ -172,7 +172,7 @@
     "\n",
     "    # save as RGB\n",
     "    face = Image.fromarray((face[:, :, :3] * 255).astype(np.uint8))\n",
-    "    face.save(os.path.join(FACES_DIR, skin_file))\n"
+    "    face.save(os.path.join(FACES_DIR, skin_file))"
    ]
   },
   {
