--- a/notebooks/4_avapix_model.ipynb
+++ b/notebooks/4_avapix_model.ipynb
@@ -12,7 +12,10 @@
     "\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "from torch.utils.data import Dataset, DataLoader"
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "\n",
+    "from validation_model import FaceValidateV1\n",
+    "from settings import *"
    ]
   },
   {
@@ -21,15 +24,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "model = FaceValidateV1.load_state_dict(VALIDATION_MODEL_PATH)\n",
+    "\n",
     "class EmbeddedFacesDataset(Dataset):\n",
     "    def __init__(self) -> None:\n",
-    "        super().__init__()"
+    "        super().__init__()\n",
+    "        "
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
