trained avapix model
figured the validation model isn't working right for a random pixel values

--- a/notebooks/2_face_validation.ipynb
+++ b/notebooks/2_face_validation.ipynb
@@ -33,6 +33,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DEVICE = (\n",
+    "    'cuda'\n",
+    "    if torch.cuda.is_available()\n",
+    "    else 'mps'\n",
+    "    if torch.backends.mps.is_available()\n",
+    "    else 'cpu'\n",
+    ")\n",
+    "\n",
+    "print (f'Using device: {DEVICE}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -364,7 +381,7 @@
     "dataloader = DataLoader(dataset, batch_size=BATCH_SIZE)\n",
     "\n",
     "# model instance\n",
-    "model = FaceValidateV1()\n",
+    "model = FaceValidateV1(DEVICE)\n",
     "\n",
     "# loss function and optimizer\n",
     "criterion = nn.BCELoss()\n",
