--- a/notebooks/2_face_validation.ipynb
+++ b/notebooks/2_face_validation.ipynb
@@ -510,6 +510,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 242,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1781"
+      ]
+     },
+     "execution_count": 242,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(label_list)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
