update validation model

--- a/notebooks/2_manual_labeling.ipynb
+++ b/notebooks/2_manual_labeling.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -22,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,19 +553,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Save flipped version of valid faces if they're not symmetric"
+    "save predicted valid faces"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "flipped 1048 faces\n"
+      "added 726 faces\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = 0\n",
+    "preds = np.load('predicted_valid_faces.npy').tolist()\n",
+    "\n",
+    "for i, i_val in enumerate(preds):\n",
+    "    is_dup = False\n",
+    "    for j, j_val in enumerate(labeled_faces):\n",
+    "        if i_val.split('/')[-1] == j_val.split('/')[-1]:\n",
+    "            is_dup = True\n",
+    "            break\n",
+    "    if not is_dup:\n",
+    "        labeled_faces.append(i_val)\n",
+    "        label_list.append(1)\n",
+    "        shutil.copy(i_val, SAMPLE_FACE_DIR)\n",
+    "        \n",
+    "        count += 1\n",
+    "\n",
+    "print(f'added {count} faces')\n",
+    "\n",
+    "del i, i_val, is_dup, j, j_val, count"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save flipped version of valid faces if they're not symmetric"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "flipped 1740 faces\n"
      ]
     }
    ],
@@ -611,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -645,19 +696,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Save result"
+    "Save predicted invalid faces"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "saved 3548 samples\n"
+      "added 396 faces\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = 0\n",
+    "preds = np.load('predicted_invalid_faces.npy').tolist()\n",
+    "\n",
+    "for i, i_val in enumerate(preds):\n",
+    "    is_dup = False\n",
+    "    for j, j_val in enumerate(labeled_faces):\n",
+    "        if i_val.split('/')[-1] == j_val.split('/')[-1]:\n",
+    "            is_dup = True\n",
+    "            break\n",
+    "    if not is_dup:\n",
+    "        labeled_faces.append(i_val)\n",
+    "        label_list.append(0)\n",
+    "        shutil.copy(i_val, SAMPLE_FACE_DIR)\n",
+    "        \n",
+    "        count += 1\n",
+    "\n",
+    "print(f'added {count} faces')\n",
+    "\n",
+    "del i, i_val, is_dup, j, j_val, count, preds"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "saved 5362 samples\n"
      ]
     }
    ],
