updated validation model

--- a/notebooks/2_manual_labeling.ipynb
+++ b/notebooks/2_manual_labeling.ipynb
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -591,14 +591,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "flipped 1048 faces\n"
+      "flipped 1259 faces\n"
      ]
     }
    ],
@@ -613,7 +613,7 @@
     "    curr_face_img = np.array(Image.open(labeled_faces[i]))\n",
     "    flipped = np.flip(curr_face_img, axis=1)\n",
     "\n",
-    "    if not (curr_face_img == flipped).all():\n",
+    "    if (curr_face_img == flipped).mean() < 0.8:\n",
     "        # new name\n",
     "        name = labeled_faces[i]\n",
     "        name = name.split(\"/\")[-1]\n",
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -734,19 +734,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "saved 3798 samples\n"
+      "saved 4735 samples\n"
      ]
     }
    ],
    "source": [
-    "np.savez(SAMPLES_PATH, faces=labeled_faces, labels=label_list)\n",
+    "np.savez('./new_smaples.npz', faces=labeled_faces, labels=label_list)\n",
     "print(f\"saved {len(label_list)} samples\")"
    ]
   }
